--- a/static/js/i18n/cn.json
+++ b/static/js/i18n/cn.json
@@ -23,6 +23,6 @@
     "displayaddress":"显示地址",
     "supwalleteos":"以下项目支持兑换或使用 EOS 稳定币",
     "mail":"商务合作请联系 biz@eosstablecoin.com",
-    "terms":"Terms"
+    "terms":"Terms and conditions"
 
 }
