--- a/static/js/i18n/en.json
+++ b/static/js/i18n/en.json
@@ -23,5 +23,5 @@
     "displayaddress":"Display Address ",
     "supwalleteos":"Institutions that supports EOS stable coins",
     "mail":"Business contact: biz@eosstablecoin.com",
-    "terms":"Terms and conditions"
+    "terms":"Terms and Conditions"
 }
