--- a/static/js/i18n/en.json
+++ b/static/js/i18n/en.json
@@ -21,7 +21,7 @@
     "tb":"Total Balance",
     "ic":"in Circulation",
     "displayaddress":"Display Address ",
-    "supwalleteos":"Institutions that supports EOS stable coins",
+    "supwalleteos":"Projects that supports EOS stable coins",
     "mail":"Business contact: biz@eosstablecoin.com",
     "terms":"Terms and Conditions"
 }
