--- a/static/js/i18n/cn.json
+++ b/static/js/i18n/cn.json
@@ -14,7 +14,7 @@
     "expensedes":"为了维持网关基本运作成本，同时避免恶意转入转出、使用网关进行兑换将收取少量费用。该费用会在兑换回原网络资产时单向收取，标准为兑换资产量的万分之五。同时由于大部分区块链网络进行转账需要支付一定金额的矿工费，在转换回原网络资产时，产生的矿工费由发起用户承担。",
     "expenseinfo":"（为了鼓励大家进行体验，在2019年3月31日前通过跨链网关兑换为 EOS 稳定币的资产，无论何时，同一用户在将该资产兑换回原网络资产时候免收手续费）",
     "support":"当前支持的跨链资产：BTC ETH USDT",
-    "infotips":"当前阶段全部跨链流通币均锚定了现有冷钱包中的存量币，随着流通量增加，冷钱包会升级为多重签名冷钱包账户并搭配多个热钱包，冷热钱包的实时余额将被统计并显示。",
+    "infotips":"跨链流通币为 100% 准备金，流通量永远小于或等于储备金钱包地址中的存量币。跨链资产每次新的发行均对应了储备金地址的存入并可以在链上查看。后续随着流通量增加，储备金钱包地址会升级为多重签名冷钱包账户。",
     "cwa":"冷钱包地址",
     "cwb":"冷钱包余额",
     "hwb":"热钱包余额",
