--- a/static/js/i18n/cn.json
+++ b/static/js/i18n/cn.json
@@ -16,6 +16,7 @@
     "support":"当前支持的跨链资产：BTC ETH USDT",
     "infotips":"跨链流通币为 100% 准备金，流通量永远小于或等于储备金钱包地址中的存量币。跨链资产每次新的发行均对应了储备金地址的存入并可以在链上查看。后续随着流通量增加，储备金钱包地址会升级为多重签名冷钱包账户。",
     "cwa":"冷钱包地址",
+    "hwa":"热钱包地址",
     "cwb":"冷钱包余额",
     "hwb":"热钱包余额",
     "tb":"冷热钱包总量",
