--- a/static/js/i18n/cn.json
+++ b/static/js/i18n/cn.json
@@ -2,8 +2,8 @@
     "home":"首页",
     "features":"特色",
     "contact":"联系我们",
-    "eosstablecoin":"EOS 生态跨链稳定币",
-    "eosstabledes":"EOS 跨链稳定币是主流区块链网络资产在 EOS 网络上的映射。持有主流区块链资产的用户可以通过跨链网关把资产兑换为EOS网络上同等数量的跨链资产，用户可以在支持的 DApp 或去中心化交易所中使用这些资产。跨链稳定币丰富了 EOS 生态的资产多样性，同时也给希望参与 EOS 生态的其他区块链网络的用户提供了极大的便利。",
+    "eosstablecoin":"EOS 生态跨链币",
+    "eosstabledes":"EOS 跨链币是主流区块链网络资产在 EOS 网络上的映射。持有主流区块链资产的用户可以通过跨链网关把资产兑换为 EOS 网络上同等数量的跨链资产，用户可以在支持的 DApp 或去中心化交易所中使用这些资产。跨链币丰富了 EOS 生态的资产多样性，同时也给希望参与 EOS 生态的其他区块链网络的用户提供了极大的便利。特别是 EUSD，由于通过锚定 USDT 间接锚定了美元，能够给用户在剧烈变化的市场提供一种稳定的选择。",
     "stable":"稳定",
     "stabledes":"流通中的跨链稳定币数量等于锁定在跨链网关中的原网络资产数字，并且跨链网关提供稳定的双向兑换，用户随时可以把相应的跨链资产兑换为原区块链网络上的资产。由此，跨链稳定币实现了和原网络资产的稳定 1：1 锚定关系。",
     "safe":"安全",
