--- a/static/js/i18n/cn.json
+++ b/static/js/i18n/cn.json
@@ -15,6 +15,7 @@
     "expenseinfo":"（为了鼓励大家进行体验，在2019年3月31日前通过跨链网关兑换为 EOS 稳定币的资产，无论何时，同一用户在将该资产兑换回原网络资产时候免收手续费）",
     "support":"当前支持的跨链资产：BTC ETH USDT",
     "infotips":"跨链流通币为 100% 准备金，流通量永远小于或等于储备金钱包地址中的存量币。跨链资产每次新的发行均对应了储备金地址的存入并可以在链上查看。后续随着流通量增加，储备金钱包地址会升级为多重签名冷钱包账户。",
+    "evaluetips":"流通量由总发行数量减去网关中待兑换的数量计算而得。",
     "cwa":"冷钱包地址",
     "hwa":"热钱包地址",
     "cwb":"冷钱包余额",
