--- a/static/js/i18n/en.json
+++ b/static/js/i18n/en.json
@@ -26,5 +26,6 @@
     "displayaddress":"Display Address ",
     "supwalleteos":"Projects that support EOS stable coins",
     "mail":"Business contact: biz@eosstablecoin.com",
-    "terms":"Terms and Conditions"
+    "terms":"Terms and Conditions",
+    "eosstable_notice":"After a short period of operation, the EOS cross-chain gateway service was basically unused from January 1, 2019. Therefore, the service was completely shut down on February 1, 2019, and only the function of switching back in the opposite direction was retained."
 }
