--- a/static/js/i18n/cn.json
+++ b/static/js/i18n/cn.json
@@ -25,8 +25,7 @@
     "authorized_not_issued":"预授权但未流通量",
     "displayaddress":"显示地址",
     "supwalleteos":"以下项目支持兑换或使用 EOS 稳定币",
-    "mail":"商务合作请联系 biz@eosstablecoin.com",
-    "terms":"Terms and Conditions",
-    "eosstable_notice":"EOS 跨链网关服务在短暂的试运营后，从2019年1月1日开始基本上无人使用，因此该服务于2019年2月1日彻底关停，仅保留反方向换回来的功能。"
+    "mail":"商务合作请联系 biz@eosstablecoin.com (已停用)",
+    "eosstable_notice":"EOS 跨链网关服务在短暂的试运行后，从2019年1月1日开始基本上无人使用，因此该服务于2019年2月1日彻底关停，仅保留反方向换回来的功能。"
 
 }
